# Value-vs-Reference

./: .gitignore  CMakeLists.txt  Value vs Reference.sln
Value vs Reference/: Value vs Reference.vcxproj  Value vs Reference.vcxproj.filters  main.cpp  profiler.hpp
value-vs-reference-app/: CMakeLists.txt
value-vs-reference-app/source/: main.cpp
